--- a/server/package.json
+++ b/server/package.json
@@ -1,48 +1,22 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "Cafeteria web server side code",
-    "main": "server.js",
-    "scripts": {
-      "start": "nodemon server.js --exec babel-node"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/JankiAmrutia/CafeteriaWeb"
-    },
-    "author": "Janki Amrutiya",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/JankiAmrutia/CafeteriaWeb/issues"
-    },
-    "homepage": "https://github.com/JankiAmrutia/CafeteriaWeb#readme",
-    "dependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "bcrypt": "^1.0.3",
-        "body-parser": "^1.18.1",
-        "cors": "^2.8.4",
-        "crypto-js": "^3.1.9-1",
-        "curlrequest": "^1.0.1",
-        "express": "^4.15.4",
-        "github": "^11.0.0",
-        "glob": "^7.1.2",
-        "jsonwebtoken": "^8.1.0",
-        "logger": "0.0.1",
-        "lowdb": "^1.0.0",
-        "mongodb": "^2.2.31",
-        "mongoose": "^4.11.11",
-        "morgan": "^1.8.2",
-        "node-libcurl": "^1.2.0",
-        "request": "^2.81.0"
-    },
-    "devDependencies": {
-        "chai": "^4.1.2",
-        "chai-http": "^3.0.0",
-        "del": "^3.0.0",
-        "node-delete": "^0.1.2",
-        "nodemon": "^1.12.1"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Janki Amrutiya",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2",
+    "logger": "0.0.1",
+    "mongodb": "^3.0.2",
+    "mongoose": "^5.0.2",
+    "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
+  }
 }
